스페이스 커맨드 ㅉㅉㄸㄹ

--- a/SimpleGallag/Views/MainView.xaml
+++ b/SimpleGallag/Views/MainView.xaml
@@ -13,6 +13,8 @@
                     Gesture="Left"/>
         <KeyBinding Command="{Binding RightDownCommand}"
                     Gesture="Right"/>
+        <KeyBinding Command="{Binding SpaceDownCommand}"
+                    Gesture="Space"/>
     </Window.InputBindings>
     <Window.DataContext>
         <vm:MainViewModel/>
