- 각종 Laser, Rock 구조 등등 추가 - 하나씩 바위떨어지면 Attack 날려서 Invoke

--- a/SimpleGallag/Views/MainView.xaml
+++ b/SimpleGallag/Views/MainView.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SimpleGallag"
         xmlns:vm="clr-namespace:SimpleGallag.ViewModels"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:converter="clr-namespace:SimpleGallag.Converters"
         mc:Ignorable="d"
+        Width="Auto"
+        Height="Auto"
+        SizeToContent="WidthAndHeight"
         Title="Gallag">
     <Window.InputBindings>
         <KeyBinding Command="{Binding LeftDownCommand}"
@@ -21,25 +25,72 @@
     </Window.DataContext>
     <Window.Resources>
         <converter:IntToBrushConverter x:Key="IntToBrushConverter"/>
+        <converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Window.Resources>
     <DockPanel>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <StackPanel Orientation="Horizontal"
                     DockPanel.Dock="Top">
             <UniformGrid Columns="3">
                 <Button Content="Start"
+                        Focusable="False"
                         Command="{Binding StartCommand}"
                         Margin="1"/>
                 <Button Content="Pause"
+                        Focusable="False"
                         Command="{Binding PauseCommand}"
                         Margin="1"/>
                 <Button Content="Stop"
+                        Focusable="False"
                         Command="{Binding StopCommand}"
                         Margin="1"/>
             </UniformGrid>
             <TextBlock Text="Score : "/>
             <TextBlock Text="{Binding Score}"/>
         </StackPanel>
-        <UniformGrid Columns="{Binding ColumnCount}" DockPanel.Dock="Bottom"
+        <Border BorderBrush="Black"
+                BorderThickness="1">
+            <Canvas Width="{Binding CanvasWidth}"
+                    Height="{Binding CanvasHeight}"
+                    Background="FloralWhite">
+                <ItemsControl ItemsSource="{Binding RockItems}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <Canvas/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemContainerStyle>
+                        <Style TargetType="ContentPresenter">
+                            <Setter Property="Canvas.Left" Value="{Binding X}"/>
+                            <Setter Property="Canvas.Top" Value="{Binding Y}"/>
+                        </Style>
+                    </ItemsControl.ItemContainerStyle>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Rectangle Width="{Binding Width}" 
+                                       Height="{Binding Height}"
+                                       Fill="{Binding Brush}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+                <Rectangle Canvas.Left="{Binding Tank.Laser.X}"
+                           Canvas.Top="{Binding Tank.Laser.Y}"
+                           Width="{Binding Tank.Laser.Width}"
+                           Height="{Binding Tank.Laser.Height}"
+                           Fill="Red"/>
+                <Rectangle Canvas.Left="{Binding Tank.X}"
+                           Canvas.Top="{Binding Tank.Y}"
+                           Width="{Binding Tank.Width}"
+                           Height="{Binding Tank.Height}"
+                           Fill="CadetBlue"/>
+            </Canvas>
+        </Border>
+
+        <!--<UniformGrid Columns="{Binding ColumnCount}" DockPanel.Dock="Bottom"
                      VerticalAlignment="Bottom">
             <Rectangle Fill="{Binding TankPosition, Converter={StaticResource IntToBrushConverter},ConverterParameter=0}" Height="50"/>
             <Rectangle Fill="{Binding TankPosition, Converter={StaticResource IntToBrushConverter},ConverterParameter=1}" Height="50"/>
@@ -47,5 +98,17 @@
             <Rectangle Fill="{Binding TankPosition, Converter={StaticResource IntToBrushConverter},ConverterParameter=3}" Height="50"/>
             <Rectangle Fill="{Binding TankPosition, Converter={StaticResource IntToBrushConverter},ConverterParameter=4}" Height="50"/>
         </UniformGrid>
+
+        <UniformGrid Columns="{Binding ColumnCount}"
+                     Rows="{Binding RowCount}">
+        </UniformGrid>-->
+        <!--<UniformGrid DockPanel.Dock="Top"
+                     Columns="{Binding ColumnCount}"
+                     Rows="{Binding RowCount}"
+                     VerticalAlignment="Top">
+            <Rectangle Fill="red" Grid.Column="0" Grid.Row="0"/>
+            <Rectangle Fill="red"/>
+            <Rectangle Fill="red"/>
+        </UniformGrid>-->
     </DockPanel>
 </Window>
