- 스피드 다른애들 각 다른 리스트로 관리하게 일단 분리햇는데,, 개선할 예정..

--- a/SimpleGallag/Views/MainView.xaml
+++ b/SimpleGallag/Views/MainView.xaml
@@ -40,10 +40,11 @@
                         Focusable="False"
                         Command="{Binding StartCommand}"
                         Margin="1"/>
-                <Button Content="Pause"
-                        Focusable="False"
-                        Command="{Binding PauseCommand}"
-                        Margin="1"/>
+                <ToggleButton Content="Pause"
+                              Focusable="False"
+                              IsChecked="{Binding IsPause}"
+                              Command="{Binding PauseCommand}"
+                              Margin="1"/>
                 <Button Content="Stop"
                         Focusable="False"
                         Command="{Binding StopCommand}"
@@ -61,7 +62,7 @@
             <Canvas Width="{Binding CanvasWidth}"
                     Height="{Binding CanvasHeight}"
                     Background="GhostWhite">
-                <ItemsControl ItemsSource="{Binding RockItems}">
+                <ItemsControl ItemsSource="{Binding BasicRockItems}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <Canvas/>
